Add ML pipeline, security, and cloud integration
Introduces new Airflow DAGs for ML training and data transformation, updates existing DAGs to support hybrid and sanitation panels, and adds Docker, BigQuery, and Firebase integration for cloud deployment. Implements secure environment variable loading, a security scanner utility, and updates .gitignore to better protect secrets. Streamlit app now supports dynamic data sources (local or BigQuery) and advanced sanitation filters. Documentation added for orchestration planning and security policy.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,15 @@ data/
 *.json
 *.pkl
 
+# Secrets and Private files
+.secrets/
+*.env
+private_secure/
+.env*
+airflow_settings.yaml
+google_service_account.json
+aws_credentials.json
+
 # Logs
 logs/
 *.log
@@ -63,3 +72,5 @@ unittests.cfg
 *.tmp
 *.temp
 .cache/
+
+!firebase.json
