--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,5 @@ matplotlib
 seaborn
 jupyter
 tqdm
+
+astro-run-dag # This package is needed for the astro run command. It will be removed before a deploy
